<resources>
    <string name="app_name">SocketAssistant</string>

    <string name="main_activity_local_ip">Local IP: %s</string>
    <string name="main_activity_nav_tcp_server">Tcp Server</string>
    <string name="main_activity_nav_tcp_client">Tcp Client</string>
    <string name="main_activity_nav_udp">Udp</string>
    <string name="main_activity_nav_serial">Serial</string>
    <string name="main_activity_nav_esp_touch">Esp Touch</string>
    <string name="main_activity_nav_setting">Setting</string>
    <string name="main_activity_nav_about">About</string>
    <string name="main_activity_net_param_remote_ip">Remote IP</string>
    <string name="main_activity_net_param_remote_port">Remote Port</string>
    <string name="main_activity_net_param_local_port">Local Port</string>
    <string name="main_activity_serial_param_port">Serial Port</string>
    <string name="main_activity_serial_param_baud_rate">Baud Rate</string>
    <string name="main_activity_serial_param_data_bits">Data Bits</string>
    <string name="main_activity_serial_param_parity">Parity</string>
    <string name="main_activity_serial_param_stop_bits">Stop Bits</string>
    <string name="main_activity_dialog_confirm">Confirm</string>
    <string name="main_activity_extra_disconnect">Disconnect</string>
    <string name="main_activity_extra_hex_transmit">Hex Transmit</string>
    <string name="main_activity_extra_hex_receive">Hex Receive</string>
    <string name="main_activity_extra_clear_when_send">Clear when send</string>
    <string name="main_activity_extra_line_wrap">Line Wrap</string>
    <string name="main_activity_extra_charset">CharSet</string>
    <string name="main_activity_toolbar_disconnect">Disconnect</string>
    <string name="main_activity_toast_no_connection">No Connection</string>
    <string name="main_activity_toast_connection_connect">%s connected</string>
    <string name="main_activity_toast_connection_disconnect">%s disconnected</string>

    <string name="main_view_model_conect_fail">build connection fail</string>

    <string name="esp_touch_activity_title">Esp Touch</string>
    <string name="esp_touch_activity_ssid">SSID:</string>
    <string name="esp_touch_activity_bssid">BSSID:</string>
    <string name="esp_touch_activity_ssid_hint">No WiFi connected</string>
    <string name="esp_touch_activity_password">Password:</string>
    <string name="esp_touch_activity_password_hint">Please input password</string>
    <string name="esp_touch_activity_device_count">Device Count:</string>
    <string name="esp_touch_activity_device_count_hint">Please input device count</string>
    <string name="esp_touch_activity_broadcast">Broadcast</string>
    <string name="esp_touch_activity_multicast">Multicast</string>
    <string name="esp_touch_activity_confirm_button">Confirm</string>
    <string name="esp_touch_activity_5G_wifi_not_supported">5G Wifi is not supported</string>
    <string name="esp_touch_activity_dialog_configuring">Esp Touch is configuring, please wait for a moment…</string>
    <string name="esp_touch_activity_dialog_start_fail">Create Esp Touch task fail</string>
    <string name="esp_touch_activity_dialog_config_fail">Esp Touch fail</string>
    <string name="esp_touch_activity_dialog_success_item">BSSID = %s, InetAddress = %s\n</string>
    <string name="esp_touch_activity_dialog_negative_button">Cancel</string>
    <string name="esp_touch_activity_dialog_positive_button">Confirm</string>

    <string name="about_activity_title">About</string>
    <string name="about_activity_github_text">Github</string>
    <string name="about_activity_open_source_text">Open Source</string>
    <string name="about_activity_open_source_address">https://github.com/NevermindZZT/SocketAssistant</string>
    <string name="about_activity_copyright_text">© 2020 Letter All rights reserved</string>

    <string name="open_source_activity_title">Open Source</string>

    <string name="setting_activity_title">Settings</string>

    <string name="setting_max_package_length_title">Max Package Length</string>
    <string name="setting_max_package_length_summary">The Max Length of Package When Receive</string>
    <string name="setting_theme_mode_title">Theme Mode</string>

</resources>
